[gd_scene load_steps=4 format=2]

[ext_resource path="res://common/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/Timer/Cooldown/Cooldown.gd" type="Script" id=2]
[ext_resource path="res://Screens/Timer/Cooldown/AbilityUI.tscn" type="PackedScene" id=3]

[node name="Cooldown" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 937.096, 549.414 )

[node name="AbilityUI" parent="." instance=ExtResource( 3 )]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Tween" type="Tween" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
